# crm

./: CMakeLists.txt  README.md  clienti.csv  interazioni.csv  main.cpp
controller/: command.cpp  command.h
model/clienti/: Cliente.cpp  Cliente.h  GestioneClienti.cpp  GestioneClienti.h
model/interazioni/: GestioneInterazioni.cpp  GestioneInterazioni.h  Interazione.cpp  Interazione.h
utils/: Validator.cpp  Validator.h  utils.cpp  utils.h
